get by id swagger
